# tui-transcript-video-tool

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: WEB_INTERFACE_MIGRATION_PLAN.md
docs/superpowers/plans/: 2026-04-27-transcribe-output-directory.md  2026-04-30-local-whisper-transcription.md  2026-05-09-materia-rag-mcp.md
docs/superpowers/specs/: 2026-04-21-content-organization-design.md  2026-04-27-transcribe-output-directory-design.md  2026-04-30-local-whisper-transcription-design.md  2026-05-05-learning-tool-design.md  2026-05-09-materia-rag-mcp-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  learning.ts  rag.ts
frontend/src/components/: DirectoryForm.tsx  DirectoryPickerDialog.tsx  EngineSelect.tsx  LocalModelsPanel.tsx  MateriaFiles.tsx
frontend/src/pages/: BossBattle.tsx  ClassDetail.tsx  Collections.tsx  Config.css  Config.tsx  CourseDetail.tsx  Courses.tsx  Dashboard.css  Dashboard.tsx  Documents.tsx  Learn.tsx  Speed.tsx  Stats.tsx  Upload.tsx
src/tui_transcript/: __main__.py  app.py  models.py  styles.tcss
src/tui_transcript/api/: __init__.py  main.py  schemas.py  state.py
src/tui_transcript/api/routes/: collections.py  config.py  dashboard.py  documents.py  files.py  generation.py  learning.py  materia_files.py  models.py  paths.py  rag.py  search.py  stats.py  tags.py  transcription.py
src/tui_transcript/screens/: config.py  dashboard.py  file_picker.py
src/tui_transcript/services/: _transcription_legacy.py  collection_store.py  config_store.py  content_generator.py  document_store.py  google_docs.py  history.py  key_moments.py  markdown_export.py  media_utils.py  pipeline.py  session_store.py  study_store.py  transcription.py
src/tui_transcript/services/rag/: __init__.py  background.py  chunker.py  cost.py  embedder.py  ingest.py  retrieve.py  (+1 more)
src/tui_transcript_mcp/: __init__.py  server.py  tools.py
tests/: conftest.py  test_api.py  test_collections.py  test_config_api.py  test_content_generator.py  test_integration.py  test_local_models.py  test_mcp_smoke.py  test_mcp_tools.py  test_models_api.py  test_pipeline_overrides.py  test_rag_api.py  test_rag_auto_reindex.py  test_rag_background.py  test_rag_chunker.py  test_rag_cost.py  test_rag_embedder.py  test_rag_extractor_pdf.py  test_rag_extractor_transcript.py  test_rag_ingest.py  test_rag_retrieve.py  test_rag_schema.py  test_rag_store_sqlite_vec.py  test_search.py  test_startup_migration.py  test_stats.py  test_study_store.py  test_transcriber_protocol.py  test_transcription_directory.py  test_video_job_engine.py  test_whisper_transcriber.py
(+8 files in other folders)
