[project]
name = "tui-transcript"
version = "0.1.0"
description = "TUI app to transcribe video files via Deepgram and export to Markdown"
requires-python = ">=3.12"
dependencies = [
    "textual",
    "deepgram-sdk",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "anthropic>=0.25",
    "faster-whisper>=1.0",
    "huggingface-hub>=0.24",
    "pydantic-ai[anthropic]>=1.90.0",
]

[project.scripts]
tui-transcript = "tui_transcript.app:main"
tui-transcript-api = "tui_transcript.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tui_transcript"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
