[project]
name = "tui-transcript"
version = "0.1.0"
description = "TUI app to transcribe video files via Deepgram and export to Markdown"
requires-python = ">=3.12"
dependencies = [
    "textual",
    "deepgram-sdk",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "anthropic>=0.25",
    "faster-whisper>=1.0",
    "huggingface-hub>=0.24",
    "pydantic-ai[anthropic]>=1.90.0",
    "sqlite-vec>=0.1.6",
    "pypdf>=5.0",
    "openai>=1.50",
    "mcp>=1.0",
    "tiktoken>=0.7",
]

[project.scripts]
tui-transcript = "tui_transcript.app:main"
tui-transcript-api = "tui_transcript.api.main:run"
tui-transcript-mcp = "tui_transcript_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tui_transcript"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "openai: integration test that hits the live OpenAI API; opt-in via -m openai",
]
